# special-invention

./: .gitignore  Makefile  README.md  analysis.md  main.py  pyproject.toml  worker.py
docs/swot/: alternative.md  design_document.md  opportunity.md  strength.md  summary.md  threat.md  weakness.md
src/: models.py  queues.py
src/activities/: convert_to_docling.py  docling_to_chunks.py  docling_to_markdown.py  embed_texts.py  generate_document_meta.py  send_to_elastic.py
src/services/: ai.py  docling.py  elastic_api.py  s3.py
src/workflows/: contracts.py  ingest_document.md  ingest_document.py
stack/: docker-compose.yml
