[project]
name = "v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.95.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "temporalio>=1.27.2",
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.14",
]
